--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,166 @@
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #d1defa;
+  font-family: sans-serif;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+
+}
+.layout {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-areas: 
+  "header header header header"
+  "nav nav nav nav"
+  "content content content lateral"
+  "footer footer footer footer"
+  ;
+  grid-template-rows: 100px 170px auto 70px;
+}
+/* ESTILOS DEL HEADER: */
+.header {
+  grid-area: header;
+  background-color: #fff;
+  text-align: left;
+  font-style: italic;
+  display: flex;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header h1 {
+  margin-left: 15px;
+  margin-top: 30px;
+}
+
+/* ESTILOS DEL NAV: */
+.nav {
+  grid-area: nav;
+  background: linear-gradient(90deg , #03228f 10% , #0e73e4 100%);
+
+}
+.nav > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+
+}
+.nav li {
+  padding: 10px;
+
+}
+.nav a {
+  display: block;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 18px;
+  font-weight: lighter;
+  color: #fff;
+  text-decoration: none;
+  transition: all 300ms;
+}
+.nav a:hover {
+  transform: scale(1.1);
+}
+/* ESTILOS PARA EL CONTENIDO: */
+.content {
+  grid-area: content;
+  background-color: #f6f7f9;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: slex-start;
+}
+.peli-item {
+  flex-grow: 1;
+  margin: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 6px #ddd;
+  border-radius: 8px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+button , input[type="submit"] , input[type="button"] {
+  background: linear-gradient(160deg , #03228f 0% , #0b70e1 77%);
+  color: #fff;
+  border: 0;
+  outline: 0;
+  padding: 15px;
+  border-radius: 3px;
+  width: 100px;
+  margin-top: 15px;
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 600ms;
+
+}
+.peli-item .edit:hover {
+  background: #e77b00;
+}
+.peli-item .delete:hover {
+  background: #9b0202;
+}
+/* ESTILOS BARRA LATERAL: */
+.lateral {
+  grid-area: lateral;
+  background-color: #f6f7f9;
+  border-left: 1px solid #ddd;
+  padding: 20px;
+
+}
+.lateral > div {
+  box-sizing: border-box;
+  width: 90%;
+  margin: 20px;
+  padding: 20px;
+  padding-top: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow:  0 0 6px #ddd;
+}
+.lateral input[type="text"] , .lateral textarea {
+  display: block;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 12px;
+  border-radius: 5px;
+  background-color: #f6f7f9;
+  color: #454545;
+  max-width: 80%;
+  opacity: 4;
+  outline: 0;
+  border-color: transparent;
+}
+
+
+/* ESTILOS DEL FOOTER: */
+.footer {
+  grid-area: footer;
+  background-color: #d1defa;
+  color: #454545;
+  border-top: 1px solid #fff;
+  text-align: left;
+  line-height: 68px;
+  padding-left: 25px;
+
+}
+
+@media(max-width: 1085px) {
+  .content {
+      flex-flow: column wrap;
+      justify-content: center;
+      align-items: center;
+
+  }
+  .peli-item {
+      width: 80%;
+  }
 }
