--- a/src/index.css
+++ b/src/index.css
@@ -18,27 +18,31 @@ body {
   "content content content lateral"
   "footer footer footer footer"
   ;
-  grid-template-rows: 100px 120px auto 70px;
+  grid-template-rows: 130px 100px 800px 70px;
+  grid-template-columns: repeat(4, 1fr);
 }
 /* ESTILOS DEL HEADER: */
 .header {
   grid-area: header;
-  background-color: #fff;
+  background-color: #000;
   text-align: left;
   font-style: italic;
   display: flex;
   justify-content: center;
+  
 }
 
 .header h1 {
   margin-left: 15px;
-  margin-top: 30px;
+  font-size: 60px;
+  margin-top: 60px;
+  color: #fff;
 }
 
 /* ESTILOS DEL NAV: */
 .nav {
   grid-area: nav;
-  background: linear-gradient(90deg , #03228f 10% , #0e73e4 100%);
+  background-color: #000;
 
 }
 .nav > ul {
@@ -46,48 +50,77 @@ body {
   justify-content: center;
   align-items: center;
   list-style: none;
-
+  margin-top: 55px;
 }
-.nav li {
-  padding: 10px;
-
+.nav .li {
+  padding-top: 14px;
+  padding-bottom: 50px;
+  background-color: #edeef1;
+  margin-left: 1px;
+  margin-right: 1px;
+  border-radius: 30px;
+  border: 0.5px solid #979696;
+  opacity: .5;
+  transition: all 0.2s ease-in;
 }
+.nav .li:hover{
+  background-color: #f6f7f9;
+  opacity: 1;
+  cursor: pointer;
+}
+.nav .li2{
+  background-color: #f6f7f9;
+  opacity: 1;
+  cursor: pointer;
+}
+
 .nav a {
   display: block;
   margin-left: 30px;
   margin-right: 30px;
   font-size: 18px;
   font-weight: lighter;
-  color: #fff;
+  color: #000;
+  opacity: 1;
   text-decoration: none;
   transition: all 300ms;
 }
 .nav a:hover {
   transform: scale(1.1);
 }
+
 /* ESTILOS PARA EL CONTENIDO: */
 .content {
   grid-area: content;
   background-color: #f6f7f9;
   display: flex;
   flex-flow: column wrap;
-  justify-content: flex-start;
-  align-items: slex-start;
+  align-items: flex-start;
+  z-index: 100;
 }
 .tarea-item {
+  display: flex;
+  max-height: 150px;
   flex-grow: 1;
-  margin: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 40%;
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  justify-content: space-between;
   background-color: #fff;
   box-shadow: 0 0 6px #ddd;
   border-radius: 8px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   padding-left: 25px;
   padding-right: 25px;
 }
-button , input[type="submit"] , input[type="button"] {
+.tareaDiv{
+ margin: 0 auto;
+ width: 80%;
+}
+
+ input[type="submit"] , input[type="button"] {
   background: linear-gradient(160deg , #03228f 0% , #0b70e1 77%);
   color: #fff;
   border: 0;
@@ -95,13 +128,29 @@ button , input[type="submit"] , input[type="button"] {
   padding: 15px;
   border-radius: 3px;
   width: 100px;
-  /* margin-top: 15px; */
-  text-transform: capitalize;
+ 
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
   transition: all 600ms;
 
+}
+.icon{
+  height: 30px;
+  width: 30px;
+  color: #fff;
+}
+.delete {
+  background: linear-gradient(160deg , #13c448 0% , #10ff58 77%);
+  border: 0;
+  outline: 0;
+  border-radius: 10px;
+  width: 45px;
+  height: 40px ;
+  cursor: pointer;
+  transition: all 600ms ease-in;
+  margin: auto 0;
+  
 }
 .tarea-item .edit:hover {
   background: #e77b00;
@@ -114,7 +163,8 @@ button , input[type="submit"] , input[type="button"] {
   grid-area: lateral;
   background-color: #f6f7f9;
   border-left: 1px solid #ddd;
-  padding: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .lateral > div {
   box-sizing: border-box;
@@ -129,15 +179,18 @@ button , input[type="submit"] , input[type="button"] {
 .lateral input[type="text"] , .lateral textarea {
   display: block;
   margin: 0 auto;
-  margin-top: 15px;
+  margin-top: 20px;
   padding: 12px;
   border-radius: 5px;
   background-color: #f6f7f9;
   color: #454545;
-  width: 70%;
+  width: 85%;
   opacity: 4;
   outline: 0;
   border-color: transparent;
+}
+.save{
+  margin-top: 15px;
 }
 .lateral input[type="text"]{
   font-size: 14px;
