--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   "content content content lateral"
   "footer footer footer footer"
   ;
-  grid-template-rows: 130px 100px 800px 70px;
+  grid-template-rows: 130px 100px 820px 70px;
   grid-template-columns: repeat(4, 1fr);
 }
 /* ESTILOS DEL HEADER: */
@@ -69,9 +69,18 @@ body {
   cursor: pointer;
 }
 .nav .li2{
+  padding-top: 14px;
+  padding-bottom: 50px;
   background-color: #f6f7f9;
+  margin-left: 1px;
+  margin-right: 1px;
+  border-radius: 30px;
+  border: 0.5px solid #979696;
   opacity: 1;
-  cursor: pointer;
+  
+}
+.nav .li2 a{
+  transform: scale(1.1);
 }
 
 .nav a {
@@ -89,6 +98,37 @@ body {
   transform: scale(1.1);
 }
 
+.buttonNav {
+  margin-bottom: 50px;
+  margin-left: 10px;
+  border: 0;
+  outline: 0;
+  border-radius: 3px;
+  height: 40px;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 300ms;
+  opacity: 0.5;
+  box-shadow: 0 0 6px #fff;
+}
+.buttonNav:hover {
+  transform: scale(1.1);
+}
+.buttonNav b{
+ font-weight: lighter;
+ opacity: 1;
+}
+.nuevaPagina{
+  outline: none;
+  border: 1px solid #ddd;
+  padding: 6px;
+  background-color: #ecedf0;
+  margin-left: 5px;
+  border-radius: 6px;
+  font-family: sans-serif;
+}
+
 /* ESTILOS PARA EL CONTENIDO: */
 .content {
   grid-area: content;
@@ -97,6 +137,15 @@ body {
   flex-flow: column wrap;
   align-items: flex-start;
   z-index: 100;
+
+}
+.container {
+  transform: translateY(100%); 
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
+.loaded{
+  transform: translateY(0);
 }
 .tarea-item {
   display: flex;
@@ -105,10 +154,11 @@ body {
   width: 40%;
   margin-top: 20px;
   margin-left: 10px;
+  margin-bottom: 10px;
   margin-right: 10px;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0 0 6px #ddd;
+  box-shadow: 0 0 9px #ddd;
   border-radius: 8px;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -119,22 +169,12 @@ body {
  margin: 0 auto;
  width: 80%;
 }
-
- input[type="submit"] , input[type="button"] {
-  background: linear-gradient(160deg , #03228f 0% , #0b70e1 77%);
-  color: #fff;
-  border: 0;
-  outline: 0;
-  padding: 15px;
-  border-radius: 3px;
-  width: 100px;
- 
-  font-size: 16px;
-  font-weight: 500;
-  cursor: pointer;
-  transition: all 600ms;
-
+.check{
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
 }
+
 .icon{
   height: 30px;
   width: 30px;
@@ -148,7 +188,7 @@ body {
   width: 45px;
   height: 40px ;
   cursor: pointer;
-  transition: all 600ms ease-in;
+  transition: all 0.2s ease-in;
   margin: auto 0;
   
 }
@@ -158,6 +198,25 @@ body {
 .tarea-item .delete:hover {
   background: #9b0202;
 }
+.bienvenida{
+  display: block;
+  max-height: 240px;
+  flex-grow: 1;
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 40px;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0 0 12px #ddd;
+  border-radius: 8px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.bienvenida p {
+  line-height: 30px;
+}
 /* ESTILOS BARRA LATERAL: */
 .lateral {
   grid-area: lateral;
@@ -165,6 +224,7 @@ body {
   border-left: 1px solid #ddd;
   padding-left: 10px;
   padding-right: 10px;
+  z-index: 100;
 }
 .lateral > div {
   box-sizing: border-box;
@@ -191,6 +251,16 @@ body {
 }
 .save{
   margin-top: 15px;
+  background-color: #000;
+  color: #fff;
+  border: 0;
+  outline: 0;
+  padding: 15px;
+  border-radius: 3px;
+  width: 100px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
 }
 .lateral input[type="text"]{
   font-size: 14px;
@@ -205,8 +275,8 @@ body {
 /* ESTILOS DEL FOOTER: */
 .footer { 
   grid-area: footer;
-  background-color: #d1defa;
-  color: #454545;
+  background-color: #979696;
+  color: #fff;
   border-top: 1px solid #fff;
   text-align: left;
   line-height: 68px;
